feat(api): backend for architecture generate, data migration, and AI target bindings (#266 #268 #269 #271 #272)
Extends DomainModel and ArchitectureProfileDraft (backend + tests) with
the fields the workbench canvas needs to be more than a visual toy:

- DomainModel/DomainNode/DomainProperty/DomainRelation gain layout
  (issue #268 position persistence), excludedNodeIds (#268 prune),
  isKey/columnName/tableName/sourceColumn/sourceDataset (#266 DER +
  #271 data migration source mapping), and foreignKey on relations
  (#266) — all optional, default-empty, so an existing DomainModel
  without them still loads (see DomainModelTest).
- WorkbenchArchitectureCanvasService: generateChangeSetRequest (#269)
  builds a real WorkbenchChangeSetDto.CreateRequest from the manifest,
  filtering excludedNodeIds and rejecting blocking dependency
  diagnostics — covered by
  generateChangeSetRequestFiltersExcludedNodesAndRejectsBlockingDiagnostics.
- WorkbenchProjectController: wires POST .../architecture/canvas:generate
  and POST .../data-migration:generate to the two generate services.
- WorkbenchDataMigrationDto/Service(+Test) (#271): builds the
  source->target mapping plan (per-table columns, transformations,
  risks) and a dry-run preview (sampled rows, warnings) from
  DomainModel table/column metadata, and its own generateChangeSetRequest
  producing a governed, reviewable migration change set.
- WorkbenchAiDto/Service (#272): WorkbenchAiItem gains targetType/
  targetId/options/defaultOption/revision so a suggestion can be bound
  to, and rendered directly on, the canvas node that originated it —
  covered by DecisionLayerApiTest's
  workbenchAiItemDecisionUsesGovernedDecisionTransition (a real
  controller-level MockMvc test of the :decide endpoint).

Investigation notes for #269/#271/#272 (what already existed vs. what
was new, per each issue's "investigate first" instruction) are in
docs/reports/issue-{269,271,272}-*-investigation.md.

Verified: mvn -pl renovatio-domain